# anet

./: .gitattributes  .gitignore  Cargo.toml  CoC.md  DEPLOYMENT.md  Dockerfile  Dockerfile.build  Dockerfile.musl  Dockerfile.server  LICENSE.md  Makefile  QUICK-START.md  README.md  diagnose.sh  docker-compose.build.yml  docker-compose.yml  free_ai.md  generate-client-config.sh  generate-config.sh  i-am-so-lazy.sh  install.sh  print.sh  project  test-client-keys.sh  test-keys-from-keys-file.sh
.github/workflows/: build-components.yaml  build.yaml  build_binaries.yaml  deploy.yml  release.yaml  release_binaries.yaml
anet-auth/: Cargo.toml  build.rs
anet-auth/src/: api.rs  crypto.rs  keygen.rs  lib.rs  main.rs  middleware.rs  migration.rs
anet-auth/src/api/: dto.rs  http.rs  mod.rs
anet-auth/src/entities/: active_sessions.rs  admins.rs  mod.rs  rates.rs  servers.rs  sessions.rs  user_servers.rs  users.rs
anet-auth/src/migration/: m20240101_000001_create_users.rs  m20240319_000002_create_admins.rs  m20240401_000003_create_rates.rs  m20240501_000004_create_active_sessions.rs  m20260504_152844_add_ipv4_to_user.rs  m20260714_000006_add_keys_to_user.rs  m20260714_000007_create_servers.rs  m20260714_000008_create_user_servers.rs  m20260714_000009_add_is_active_to_servers.rs  mod.rs
anet-client/: Cargo.toml  build.rs
anet-client-cli/: Cargo.toml  build.rs
anet-client-cli/src/: config.rs  lib.rs  main.rs  tun_factory.rs
anet-client-core/: Cargo.toml
anet-client-core/src/: auth.rs  client.rs  config.rs  dns.rs  events.rs  lib.rs  platform.rs  router.rs  router_macos.rs  socket.rs  statistic.rs  traits.rs  updater.rs  vpn.rs
anet-client-core/src/dns/: linux.rs  macos.rs  mod.rs
anet-client-core/src/transport/: factory.rs  mod.rs  quic.rs  ssh.rs  vnc.rs
anet-client-gui/: Cargo.toml  app.manifest  build.rs
anet-client-gui/.cargo/: config.toml
anet-client-gui/macos/: AppIcon.icns  Info.plist  entitlements.plist
anet-client-gui/src/: app.rs  config.rs  icons.rs  lib.rs  main.rs  router.rs  tray.rs  tun_factory.rs
anet-client/src/: an_tun.rs  atun_client.rs  auth_handler.rs  client.rs  client_udp_socket.rs  config.rs  exchange.rs  lib.rs  linux_router.rs  lrm.rs  main.rs  router.rs  unix_tcp_tuner.rs  vpn_handler.rs  windows_router.rs  windows_tcp_tuner.rs
anet-common/: Cargo.toml  build.rs
anet-common/proto/: protocol.proto
anet-common/src/: anet_udp_socket.rs  atun.rs  codecs.rs  config.rs  consts.rs  crypto_utils.rs  dto.rs  encryption.rs  jitter.rs  lib.rs  padding_utils.rs  protocol.rs  quic_settings.rs  stream_framing.rs  tcp.rs  transport.rs  transport_trait.rs  tun_params.rs  udp_poller.rs
anet-ebpf/: Cargo.toml
anet-ebpf/src/: lib.rs  main.rs  parser.rs
anet-keygen/: Cargo.toml
anet-keygen/src/: check_key.rs  main.rs
anet-mobile/: Cargo.toml  build.rs
anet-mobile/src/: android_impl.rs  lib.rs
anet-server/: Cargo.toml  build.rs
anet-server/src/: anet_af_xdp_socket.rs  atun_server.rs  auth_handler.rs  auth_provider.rs  client.rs  client_registry.rs  config.rs  db.rs  ebpf.rs  handler.rs  ip_pool.rs  lib.rs  main.rs  multikey_udp_socket.rs  router.rs  server.rs  ssh_server.rs  utils.rs  vpn_handler.rs
anet-server/src/entities/: clients.rs
anet-server/src/migration/: m20260513_132524_create_leases.rs  mod.rs
anet-server/src/servers/: mod.rs  quic.rs  ssh.rs  vnc.rs
anet-webui/: index.html  package-lock.json  package.json  vite.config.ts
anet-webui/src/: App.vue  utils.ts
anet-webui/src/api/: auth.ts  client.ts  rate.ts  servers.ts  users.ts
anet-webui/src/components/: CreateUserModal.vue  RateCreateForm.vue  RateEditForm.vue  ServerModal.vue  UserForm.vue  UserModal.vue
anet-webui/src/composables/: useRate.ts  useUser.ts
anet-webui/src/models/: rate.ts  server.ts  user.ts
anet-webui/src/router/: index.ts
anet-webui/src/ui/: Auth.vue  Servers.vue  Users.vue
contrib/: client_template.toml  install.iss
contrib/config/: .env.example.auth  client.toml  client.yaml  nginx.conf  server.toml  server.yaml
contrib/dev/: docker-compose.dev.yml  docker-compose.yml  nginx.dev.conf
contrib/docker/: Dockerfile.auth  Dockerfile.webui  docker-compose.auth.preset.yaml  docker-compose.infra.yaml
contrib/docs/: anet.ru.md  http.api.ru.md
contrib/inno_setup/: install.iss
contrib/scripts/: build-macos-app.sh
contrib/systemd/: anet-auth.service  anet-server.service  anet-vpn.service
quick_start/: .dockerignore  Dockerfile  QUICK-START.md  docker-compose.yml  i-am-so-lazy.sh  openssl-server.cnf
