[workspace]
resolver = "2"
members = ["anet-server", "anet-client", "anet-common"]
default-members = ["anet-server", "anet-client", "anet-common"]

[workspace.dependencies]
tun = { version = "0.8.3", features = ["async"] }
tokio = {version = "1.47.1", features = ["full"]}
env_logger = "0.11.8"
log = { version = "0.4.22", default-features = false}
tokio-rustls = {version = "0.26.2", features = ["ring", "aws-lc-rs"]}
rustls = { version = "0.23.31", features = ["ring", "aws-lc-rs"] }
anyhow = "1.0.99"
bytes = "1.10.1"
prost = "0.14.1"
clap = { version = "4.5.47", default-features = false, features = ["std", "derive"] }
rustls-pemfile = "2.2.0"
base64 = "0.22.1"
rand = { version = "0.8", features = ["std"] }
chacha20poly1305 = "0.10.1"
quinn = {version = "0.11.9", features = ["rustls", "ring", "aws-lc-rs"]}
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.8"

[profile.release.package.anet-client]
debug = 2
codegen-units = 1

[profile.release.package.anet-server]
debug = 2
codegen-units = 1

[profile.release.package.anet-common]
debug = 2
codegen-units = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
incremental = false


[profile.release.package."*"]
opt-level = 3
