[package]
name = "anet-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
env_logger = { workspace = true }
dotenvy = "0.15"

poem = "3.1.8"
poem-openapi = { version = "5.1.12", features = ["swagger-ui", "uuid"] }

sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1.19"
uuid = { version = "1.10", features = ["serde", "v4"] }
chrono = "0.4.42"

[[bin]]
name = "anet-auth"
path = "src/main.rs"