[package]
name = "anet-client-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = {workspace = true}
log = {workspace = true}
anyhow = {workspace = true}
clap = {workspace = true}
serde = { workspace = true, features = ["derive"] }
toml = {workspace = true}
bytes = {workspace = true}
rustls = {workspace = true}
env_logger = {workspace = true}
quinn = {workspace = true } # Только для типов

async-trait = "0.1.89"

anet-common = { path = "../anet-common"}
anet-client-core = { path = "../anet-client-core"}

# Platform-specific dependencies for route management
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
net-route = "0.4"

# netdev is needed on all desktop platforms for interface discovery
[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
netdev = { workspace = true }

# libc is needed for privilege checking on Unix
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
chrono = "0.4.42"

[[bin]]
name = "anet-client"
path = "src/main.rs"

