[package]
name = "anet-client-gui"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
eframe = "0.33.2"
egui = "0.33.2"

tokio = { workspace = true }
anyhow = { workspace = true }
env_logger = {workspace = true}
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bytes = {workspace = true}
toml = { workspace = true }

async-trait = "0.1.89"
serde_json = "1.0.147"
image = { version = "0.24", features = ["ico", "png"] }

anet-client-core = { path = "../anet-client-core" }
anet-common = { path = "../anet-common" }
rfd = "0.16.0"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
wintun = "0.4"

# Platform-specific dependencies for route management
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
net-route = "0.4"

# netdev is needed on all desktop platforms for interface discovery
[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
netdev = { workspace = true }

# macOS-specific dependencies for privilege escalation
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[features]
default = []
console = []

[package.metadata.winres]
Manifest = "app.manifest"
ProductVersion = "1.0.0.0"
FileVersion = "1.0.0.0"

[build-dependencies]
winres = "0.1"

[[bin]]
name = "anet-gui"
path = "src/main.rs"
