[package]
name = "anet-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {workspace = true}
tokio-rustls = {workspace = true}
rustls = {workspace = true}
env_logger = {workspace = true}
log = {workspace = true}
anyhow = {workspace = true}
clap = {workspace = true}
prost = {workspace = true}
bytes = {workspace = true}
rustls-pemfile = {workspace = true}

anet-common = { path = "../anet-common"}
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.8"

[build-dependencies]
chrono = "0.4.42"