[package]
name = "anet-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {workspace = true}
log = {workspace = true}
anyhow = {workspace = true}
clap = {workspace = true}
serde = { workspace = true, features = ["derive"] }
toml = {workspace = true}
bytes = {workspace = true}
rustls = {workspace = true}
env_logger = {workspace = true}
quinn = {workspace = true } # Только для типов

async-trait = "0.1.89"
netdev = { version = "0.39", features = ["gateway"] }
anet-common = { path = "../anet-common"}
anet-client-core = { path = "../anet-client-core"}


[build-dependencies]
chrono = "0.4.42"

[[bin]]
name = "anet-client"
path = "src/main.rs"

