[package]
name = "anet-common"
version = "0.1.0"
edition = "2024"

[dependencies]
tun = {workspace = true}
bytes = {workspace = true}
prost = {workspace = true}
tokio = {workspace = true}
log = {workspace = true}
anyhow = {workspace = true}
quinn = {workspace = true, features = ["rustls", "ring", "aws-lc-rs"]}
chacha20poly1305 = {workspace = true}
aes-gcm = "0.10.3"
aead = { version = "0.5.2", features = ["getrandom"] }
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
prost-build = "0.14.1"