[package]
name = "anet-common"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = []
poem = ["dep:poem-openapi"]

[dependencies]
tun = {workspace = true}
bytes = {workspace = true}
prost = {workspace = true}
tokio = {workspace = true}
log = {workspace = true}
anyhow = {workspace = true}
quinn = {workspace = true }
chacha20poly1305 = {workspace = true}
aes-gcm = "0.10.3"
aead = { version = "0.5.2", features = ["getrandom"] }
serde = { workspace = true, features = ["derive"] }
rand = {workspace = true}
x25519-dalek = {workspace = true}
ed25519-dalek = {workspace = true}
sha2 = {workspace = true}
poem-openapi = { version = "5.1.12", features = ["uuid"], optional = true }

base64 = "0.22.1"


[build-dependencies]
prost-build = "0.14.1"

[lib]
path = "src/lib.rs"
