[package]
name = "anet-mobile"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = {workspace = true}
toml = {workspace = true}
log = { workspace = true }
tun = {workspace = true}
jni = "0.21"
android_logger = "0.15.1"

anet-client-core = { path = "../anet-client-core" }
anet-common = { path = "../anet-common" }
bytes = { workspace = true }
async-trait = { workspace = true }
ipnet = { workspace = true }

[build-dependencies]
chrono = "0.4.42"

[lib]
crate-type = ["cdylib"]
