[package]
name = "anet-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {workspace = true}
rustls = {workspace = true, features = ["ring", "aws-lc-rs"]}
env_logger = {workspace = true}
log = {workspace = true}
anyhow = {workspace = true}
clap = {workspace = true}
prost = {workspace = true}
bytes = {workspace = true}
rustls-pemfile = {workspace = true}
base64 = {workspace = true}
rand = {workspace = true}
chacha20poly1305 = {workspace = true}
quinn = {workspace = true, features = ["rustls", "ring", "aws-lc-rs"]}
serde = { workspace = true, features = ["derive"] }
toml = {workspace = true}
x25519-dalek = {workspace = true}
dashmap = "7.0.0-rc2"
arc-swap = "1.6"
ed25519-dalek = {workspace = true}

anet-common = { path = "../anet-common"}
