[package]
name = "anet-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = {workspace = true }
rustls = {workspace = true }
env_logger = {workspace = true}
log = {workspace = true}
anyhow = {workspace = true}
clap = {workspace = true}
prost = {workspace = true}
bytes = {workspace = true}
rustls-pemfile = {workspace = true}
base64 = {workspace = true}
rand = {workspace = true}
chacha20poly1305 = {workspace = true}
quinn = {workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = {workspace = true}
x25519-dalek = {workspace = true}
ed25519-dalek = {workspace = true}
async-trait = { workspace = true }

russh = "0.45"
russh-keys = "0.45"

dashmap = "7.0.0-rc2"
arc-swap = "1.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

anet-common = { path = "../anet-common"}

[[bin]]
name = "anet-server"
path = "src/main.rs"
