[package]
name = "anet-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["embed-ebpf"]
embed-ebpf = []

[dependencies]
tokio = {workspace = true }
rustls = {workspace = true }
env_logger = {workspace = true}
log = {workspace = true}
anyhow = {workspace = true}
clap = {workspace = true}
prost = {workspace = true}
bytes = {workspace = true}
rustls-pemfile = {workspace = true}
base64 = {workspace = true}
rand = {workspace = true}
chacha20poly1305 = {workspace = true}
quinn = {workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = {workspace = true}
x25519-dalek = {workspace = true}
ed25519-dalek = {workspace = true}
async-trait = { workspace = true }
futures = { workspace = true }

aya = { version = "0.13.1", default-features = false }
aya-log = "0.2.1"
libc = "0.2.175"
russh = "0.45"
russh-keys = "0.45"
xsk-rs = "0.8.0"
pnet_packet = "0.35.0"
netdev = "0.30.0"
parking_lot = "0.12"
dashmap = "7.0.0-rc2"
arc-swap = "1.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

anet-common = { path = "../anet-common" }

[build-dependencies]
aya-build = { version = "0.1.3", default-features = false }
cargo_metadata = "0.23.1"
anyhow = "1.0.102"


[[bin]]
name = "anet-server"
path = "src/main.rs"
